--- a/styles.css
+++ b/styles.css
@@ -1,66 +1,57 @@
 body {
-    background-color: #333;
-    color: #fff;
     font-family: Arial, sans-serif;
+    background-color: #1e1e1e;
+    color: #f4f4f4;
+    text-align: center;
 }
-
-.table-container {
-    margin: 20px;
+h1 {
+    color: #ff5733;
 }
-
-.dataTables_wrapper {
-    color: #fff;
+textarea {
+    width: 80%;
+    height: 200px;
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    border: 2px solid #3498db;
+    padding: 10px;
+    margin-bottom: 20px;
+    resize: none;
+    border-radius: 5px;
 }
-
-.dataTables_wrapper .dataTables_filter input {
-    color: #000;
+button {
+    background-color: #ff5733;
+    color: #ecf0f1;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s;
 }
-
-.dataTables_wrapper .dataTables_length select {
-    color: #000;
+button:hover {
+    background-color: #c0392b;
 }
-
-table.dataTable thead th {
-    background-color: #555;
-    color: #fff;
+table.dataTable thead {
+    background-color: #ffbe33;
+    color: #1e1e1e;
 }
-
+table.dataTable tbody tr {
+    background-color: #34495e;
+    color: #ecf0f1;
+}
+table.dataTable tbody tr:nth-child(odd) {
+    background-color: #2c3e50;
+}
+table.dataTable tbody tr:hover {
+    background-color: #ff5733;
+    color: #ecf0f1;
+}
+table.dataTable tbody tr.odd:hover {
+    background-color: #c0392b;
+}
+table.dataTable tbody tr.even:hover {
+    background-color: #c0392b;
+}
 table.dataTable tbody td {
-    background-color: #444;
-    color: #fff;
-}
-
-.dataTables_wrapper .dataTables_paginate .paginate_button {
-    background-color: #444;
-    color: #fff;
-}
-
-.dataTables_wrapper .dataTables_paginate .paginate_button.current {
-    background-color: #007bff;
-    color: #fff;
-}
-
-.dataTables_wrapper .dataTables_info {
-    color: #fff;
-}
-
-.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
-    background-color: #0069d9;
-    color: #fff;
-}
-
-.dataTables_wrapper .dataTables_length select {
-    background-color: #444;
-    color: #fff;
-}
-
-.dataTables_wrapper .dataTables_filter input {
-    background-color: #444;
-    color: #fff;
-    border: 1px solid #555;
-}
-
-.dataTables_wrapper .dataTables_filter input:focus {
-    background-color: #555;
-    color: #fff;
+    border-top: 1px solid #2c3e50;
 }
