--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,57 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #1e1e1e;
-    color: #f4f4f4;
+    background-color: #f0f0f0;
+    color: #333;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 h1 {
-    color: #ff5733;
+    color: #007acc;
+    margin: 20px 0;
 }
 textarea {
     width: 80%;
     height: 200px;
-    background-color: #2c3e50;
-    color: #ecf0f1;
-    border: 2px solid #3498db;
+    background-color: #ffffff;
+    color: #333;
+    border: 1px solid #ccc;
     padding: 10px;
     margin-bottom: 20px;
     resize: none;
     border-radius: 5px;
+    font-size: 16px;
+    line-height: 1.5;
 }
 button {
-    background-color: #ff5733;
-    color: #ecf0f1;
+    background-color: #007acc;
+    color: #ffffff;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
     font-weight: bold;
     transition: background-color 0.3s;
+    font-size: 16px;
 }
 button:hover {
-    background-color: #c0392b;
+    background-color: #005ea6;
 }
 table.dataTable thead {
-    background-color: #ffbe33;
-    color: #1e1e1e;
+    background-color: #007acc;
+    color: #ffffff;
 }
 table.dataTable tbody tr {
-    background-color: #34495e;
-    color: #ecf0f1;
+    background-color: #ffffff;
+    color: #333;
 }
 table.dataTable tbody tr:nth-child(odd) {
-    background-color: #2c3e50;
+    background-color: #f0f0f0;
 }
 table.dataTable tbody tr:hover {
-    background-color: #ff5733;
-    color: #ecf0f1;
-}
-table.dataTable tbody tr.odd:hover {
-    background-color: #c0392b;
-}
-table.dataTable tbody tr.even:hover {
-    background-color: #c0392b;
+    background-color: #007acc;
+    color: #ffffff;
 }
 table.dataTable tbody td {
-    border-top: 1px solid #2c3e50;
+    border-top: 1px solid #ccc;
 }
