--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ table.dataTable tbody tr:nth-child(odd) {
     background-color: #f0f0f0;
 }
 table.dataTable tbody tr:hover {
-    background-color: #007acc;
+    background-color: #005ea6;
     color: #ffffff;
 }
 table.dataTable tbody td {
